force-app/main/default/objects/TWIST_Footer_Config__mdt/TWIST_Footer_Config__mdt.object-meta.xml
<CustomObject>
    <label>TWIST Footer Config</label>
    <pluralLabel>TWIST Footer Configs</pluralLabel>
</CustomObject>