force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Additional_Text__c.field-meta.xml
<CustomField>
    <fullName>Additional_Text__c</fullName>
    <label>Additional Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>