force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Client_Service_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Service_Phone_Number__c</fullName>
    <label>Client Service Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>