force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Country_Flag_Label__c.field-meta.xml
<CustomField>
    <fullName>Country_Flag_Label__c</fullName>
    <label>Country Flag Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>