force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Country_Flag_Src__c.field-meta.xml
<CustomField>
    <fullName>Country_Flag_Src__c</fullName>
    <label>Country Flag Src</label>
    <length>10</length>
    <type>Text</type>
</CustomField>