force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Display_User_Rights_Logo__c.field-meta.xml
<CustomField>
    <fullName>Display_User_Rights_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display User Rights Logo</label>
    <type>Checkbox</type>
</CustomField>