force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Hide_Flag_Country__c.field-meta.xml
<CustomField>
    <fullName>Hide_Flag_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide_Flag_Country</label>
    <type>Checkbox</type>
</CustomField>