force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Language_Country__c.field-meta.xml
<CustomField>
    <fullName>Language_Country__c</fullName>
    <label>Language Country</label>
    <length>6</length>
    <type>Text</type>
</CustomField>