force-app/main/default/objects/TWIST_Footer_Config__mdt/fields/Url_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Url_Prefix__c</fullName>
    <label>Url Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>