force-app/main/default/objects/TWIST_Footer_Config__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Dispatch_Country__c</columns>
    <columns>Language_Country__c</columns>
    <columns>Client_Service_Phone_Number__c</columns>
    <columns>Country_Flag_Label__c</columns>
    <columns>Country_Flag_Src__c</columns>
    <columns>Display_User_Rights_Logo__c</columns>
    <columns>Url_Prefix__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>